# rk

./: CMakeLists.txt
.github/workflows/: ci-cd.yml
StrategyPattern/: CMakeLists.txt  RenderTextProcessor.cpp
include/Payment/: CreditCard.h  PayByCreditCard.h  PaymentStrategy.h
include/Render/: RenderHtmlListStrategy.h  RenderListStrategy.h  RenderMarkdownListStrategy.h  RenderTextProcessor.h
src/: ECommerceApp.cpp
src/Payment/: CreditCard.cpp  Order.cpp  PayByCreditCard.cpp  PayByPayPal.cpp
src/Render/: RenderHtmlListStrategy.cpp  RenderMarkdownListStrategy.cpp  RenderTextProcessor.cpp
src/RenderStrategies/: RenderHtmlListStrategy.cpp  RenderMarkdownListStrategy.cpp
src/Strategy/: ConceptualExample.cpp  ConceptualExampleModern.cpp  RealWorldExample.cpp  RealWorldExampleModern.cpp  StaticStrategyExample.cpp
test/: test.cpp  tests.cpp
